23 May 2001 CKD 9345 support - Greg Smith
21 May 2001 Correct availability of N3 instructions in S/390 mode - Jan Jaeger
19 May 2001 Compression corrections - Bernard van der Helm
19 May 2001 Include basic crypto support - Jan Jaeger
19 May 2001 Correct multiply/divide long - Jan Jaeger
19 May 2001 Correct RCP host address when nonzero MSO - Paul Leisy
18 May 2001 Correct CEFBR/CFEBR register use - Jan Jaeger
18 May 2001 Correct STOSM/STNSM interception - Paul Leisy
18 May 2001 Correct TRAP save area page crosser - Paul Leisy
18 May 2001 Correct operation exception interception - Paul Leisy
17 May 2001 Correct address wrap when SIE is interrupted - Jan Jaeger
17 May 2001 Correct specification exception interception - Jan Jaeger
16 May 2001 Correct CPU addr in PSA during external interrupts - Paul Leisy
15 May 2001 Correct STFL installed facility bit settings - Jan Jaeger
15 May 2001 Correct PR register update - Jan Jaeger
15 May 2001 Correct prefix storage key update in TPI - Jan Jaeger
15 May 2001 Correct TEA on STURA/LURA protection exception - Paul Leisy
09 May 2001 Correct TRT address wrap - Paul Leisy
08 May 2001 Fixes for RP instruction - Paul Leisy
08 May 2001 Fix gr15 in TRAP instruction - Paul Leisy
07 May 2001 CMPSC fix - Bernard van der Helm
07 May 2001 Correct false data exception in CVDG - Jan Jaeger
06 May 2001 Fix to Lock Page - Jan Jaeger
06 May 2001 Complete Storage Key Assist - Jan Jaeger
06 May 2001 Complete Move Page Facility 2 - Jan Jaeger
04 May 2001 Correct fbadasd.c syntax error - Greg Smith
04 May 2001 Correct RRB/RRBE rcpkey - Paul Leisy
03 May 2001 Try to open FBA emulated device readonly if open for
            readwrite failed.  Allows Linux/390 to be installed
            from cdrom - Greg Smith
03 May 2001 Allow `readonly' to be specified for shadowed ckd or cckd
            devices.  Base file will be opened O_RDONLY. - Greg Smith
03 May 2001 Enablement of ISKE/RRBE/SSKE in S/370 mode - Valery Pogonchenko