@@ -1873,8 +1873,12 @@ DEF_INST(compare_and_signal_bfp_short_reg);
 DEF_INST(compare_and_signal_bfp_short);
 DEF_INST(convert_fix32_to_bfp_long_reg);
 DEF_INST(convert_fix32_to_bfp_short_reg);
+DEF_INST(convert_fix64_to_bfp_long_reg);
+DEF_INST(convert_fix64_to_bfp_short_reg);
 DEF_INST(convert_bfp_long_to_fix32_reg);
 DEF_INST(convert_bfp_short_to_fix32_reg);
+DEF_INST(convert_bfp_long_to_fix64_reg);
+DEF_INST(convert_bfp_short_to_fix64_reg);
 DEF_INST(divide_bfp_ext_reg);
 DEF_INST(divide_bfp_long_reg);
 DEF_INST(divide_bfp_long);
