@@ -1,3 +1,5 @@
+24 May 2001 Added CGEBR/CGDBR - Jan Jaeger
+24 May 2001 Added CEGBR/CDGBR - Kris
 23 May 2001 CKD 9345 support - Greg Smith
 21 May 2001 Correct availability of N3 instructions in S/390 mode - Jan Jaeger
 19 May 2001 Compression corrections - Bernard van der Helm
